<resources>
    <string name="app_name">Stock Check</string>
    <string name="main_headerTextView">Stock Check</string>
    <string name="main_exitButton">Exit</string>
    <string name="main_itemManagementButton">Items</string>
    <string name="main_itemCheckButton">Item Check</string>
    <string name="main_historyButton">History</string>
    <string name="backButton">Back</string>
    <string name="addButton">+</string>
    <string name="deleteButton">Delete</string>
    <string name="saveButton">Save</string>
    <string name="sendButton">Send</string>
    <string name="item_headerTextView">Item Management</string>
    <string name="item_UnitEditText">Unit...</string>
    <string name="item_NameEditText">Item name...</string>
    <string name="itemCheck_dateTextView">Date:</string>
    <string name="itemcheck_headerTextView">Item Check</string>
    <string name="history_headerTextView">History</string>
    <string name="addOrRemoveButton">OK</string>
</resources>
