<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_weight="100"
    android:layout_gravity="center_horizontal"
    tools:context="com.giao.stockcheck.MainActivity">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="5">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/header"
            android:text="@string/main_headerTextView"
            android:id="@+id/textView" />
    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="95"
        android:layout_gravity="center_horizontal">
        <Button
            android:layout_width="match_parent"
            android:layout_height="0dp"
            style="@style/main_activity_button"
            android:layout_weight="25"
            android:text="@string/main_itemManagementButton"
            android:id="@+id/itemManagementButton"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="0dp"
            style="@style/main_activity_button"
            android:layout_weight="25"
            android:text="@string/main_itemCheckButton"
            android:id="@+id/itemCheckButton"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="0dp"
            style="@style/main_activity_button"
            android:layout_weight="25"
            android:text="@string/main_historyButton"
            android:id="@+id/historyButton"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="0dp"
            style="@style/main_activity_button"
            android:layout_weight="25"
            android:id="@+id/exitButton"
            android:text="@string/main_exitButton"/>
    </LinearLayout>
</LinearLayout>
