<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:orientation="vertical"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="#b1cef4">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <Button
        style="@style/back_button"
        android:text="@string/backButton"
        android:id="@+id/backButton"/>
    <TextView
        style="@style/back_textView"
        android:id="@+id/textViewtemp1"
        />
    <TextView
        style="@style/back_textView"
        android:id="@+id/textViewtemp2"/>
</LinearLayout>
<TextView
    style="@style/header2"
    android:layout_width="match_parent"
    android:layout_height="45dip"
    android:text="@string/item_headerTextView"
    android:id="@+id/SelectecItemtextView"/>

<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_weight="100"
    android:gravity="center_horizontal"
    android:weightSum="100">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dip"
        android:layout_marginTop="1dp">
        <AutoCompleteTextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="4dp"
            android:id="@+id/itemListAutoTextView"
            android:layout_weight="3"
            android:background="#fff"
            android:hint="List of Items..." />
        <Button
            style="@style/add_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/addButton"
            android:id="@+id/addItemListButton"
            android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dip">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:orientation="horizontal"
            android:layout_marginTop="1dp"
            android:background="#ffffff"
            android:weightSum="4">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/itemNameEditText"
                android:layout_marginLeft="4dp"
                android:layout_weight="3"
                android:hint="@string/item_NameEditText" />
            <EditText
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:id="@+id/itemUnitEditText"
                android:layout_weight="1"
                android:hint="@string/item_UnitEditText" />
        </LinearLayout>
        <Button
            style="@style/add_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/addButton"
            android:id="@+id/addItemButton"
            android:layout_weight="1"/>
    </LinearLayout>
    <ListView
        style="@style/listview_style"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/orderListView"
        android:layout_weight="100" />
</LinearLayout>


</LinearLayout>