<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#b1cef4">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            style="@style/back_button"
            android:text="@string/backButton"
            android:id="@+id/backButton"/>
        <TextView
            style="@style/back_textView"
            android:id="@+id/textViewtemp1"
            />
        <Button
            style="@style/back_button"
            android:text="@string/sendButton"
            android:id="@+id/saveButton"/>
    </LinearLayout>
    <TextView
        style="@style/header2"
        android:layout_width="match_parent"
        android:layout_height="45dip"
        android:text="@string/history_headerTextView"
        android:id="@+id/SelectecItemtextView"
        android:layout_weight="10"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="100"
        android:gravity="center_horizontal"
        android:weightSum="100">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dip">
            <Spinner
                style="@style/spinner_style"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/itemListSpinner"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dip"
            android:paddingTop="1dp">
            <Spinner
                style="@style/spinner_style"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/dateSpinner"/>
        </LinearLayout>
        <ListView
            style="@style/listview_style"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:id="@+id/itemListView"
            android:layout_weight="100" />
    </LinearLayout>


</LinearLayout>